--- a/index.htm
+++ b/index.htm
@@ -1,51 +1,47 @@
 <!DOCTYPE html>
 <html lang="uk">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Love 🦝❤️</title>
     <!-- Google Fonts: Pacifico and Dancing Script -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Pacifico&family=Dancing+Script:wght@500&display=swap"
-      rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Pacifico&family=Dancing+Script:wght@500&display=swap"
+        rel="stylesheet"
     />
     <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="3dstyles.css" />
-    <!-- Three.js (if needed) -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"
-      defer
-    ></script>
-    <!-- Model Viewer -->
-    <script
-      type="module"
-      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
-      defer
-    ></script>
-    <!-- Main Script -->
-    <script src="3dscript.js" defer></script>
-  </head>
-  <body>
-    <!-- Container for dynamic pages -->
-    <div id="pagesContainer"></div>
+    <link rel="stylesheet" href="stili.css" />
+</head>
+<body>
+    <!-- Contenitore per le pagine dinamiche -->
+    <div id="contenitorePagine"></div>
 
-    <!-- Heartbeat Sound -->
-    <audio id="heartSound" src="heartbeat.mp3"></audio>
+    <!-- Overlay per la transizione tra pagine -->
+    <div class="transizione-pagina"></div>
 
-    <!-- Template for the page structure -->
-    <template id="page-template">
-      <div class="container">
-        <div class="love-meter">
-          <div class="progress-bar">
-            <div class="progress-fill"></div>
-          </div>
-          <span class="click-count"></span>
+    <!-- Suono del battito del cuore -->
+    <audio id="suonoCuore" preload="auto">
+        <source src="heartbeat.mp3" type="audio/mpeg">
+        <source src="heartbeat.ogg" type="audio/ogg">
+    </audio>
+
+    <!-- Template per la struttura della pagina -->
+    <template id="template-pagina">
+        <div class="contenitore">
+            <div class="misuratore-amore">
+                <div class="barra-progresso">
+                    <div class="riempimento-progresso"></div>
+                </div>
+                <span class="conteggio-click"></span>
+            </div>
+            <div class="messaggio-romantico"></div>
+            <div class="contenitore-procione">
+                <div class="procione"></div>
+            </div>
         </div>
-        <div class="romantic-message"></div>
-        <div class="raccoon-container">
-          <div class="raccoon"></div>
-        </div>
-      </div>
     </template>
-  </body>
+
+    <!-- Script principale -->
+    <script src="script.js"></script>
+</body>
 </html>
